# face_blendshape

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/face_blendshapes_app/: CMakeLists.txt
app/face_blendshapes_app/conf/: faceBlendshapes.ini  your_interaction_file.sh
app/face_blendshapes_app/scripts/: face_blendshapes_app.xml
modules/: CMakeLists.txt  environment.yml
modules/face_blendshapes/: CMakeLists.txt  main.py  webcam_yarp.py
